--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
